<resources>
    <string name="app_name">Moja jednostka OSP</string>
    <string name="app_name_pl">Moja jednostka OSP</string>
    <string name="base_server_url">https://192.168.1.114:8443</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="register_button">Zarejestruj</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="firebrigade_name">Nazwa jednostki</string>
    <string name="firebrigade_voivodeship">Województwo</string>
    <string name="firebrigade_district">Powiat</string>
    <string name="firebrigade_community">Gmina</string>
    <string name="firebrigade_city">Miejscowość</string>
    <string name="firebrigade_ksrg">Jednostka należy do KSRG</string>
    <string name="action_settings">Settings</string>
    <string name="firebrigade_add_form_confirm">Dodaj jednostkę</string>
    <string name="firebrigae_create_success">Pomyślnie utworzono jednostkę</string>
    <string name="firebrigae_create_failure">Dodawanie jednostki nie powiodło się... spróbuj ponownie...</string>
    <string name="firebrigade_save_button">Zapisz</string>
    <string name="action_firebrigade_edit">Edytuj jednostkę</string>
    <string name="firebrigade_no_content">Brak jednostki do wyświetlenia</string>
    <string name="firebrigade_add_info">Wciśnij + aby dodać jednostkę</string>
    <string name="add_firebrigade">Dodawanie jednostki</string>
    <string name="edit_firebrigade">Edytowanie jednostki</string>
    <string name="add_firebrigade_error">Wypełnij wszystkie pola</string>
    <string name="update_firebrigade_error">Błąd podczas aktualizacji, spróbuj ponownie...</string>
    <string name="firebrigade_data_info">Dane jednostki</string>
    <string name="firebrigade_data_view">Tu powinny być dane jednostki!</string>
    <string name="name"><![CDATA[<b>Nazwa: </b>]]> </string>
    <string name="voivodeship"><![CDATA[<b>Województwo: </b>]]></string>
    <string name="district"><![CDATA[<b>Powiat: </b>]]></string>
    <string name="community"><![CDATA[<b>Gmina: </b>]]></string>
    <string name="city"><![CDATA[<b>Miejscowość: </b>]]></string>
    <string name="firefighters_count"><![CDATA[<b>Ilość strażakow: </b>]]></string>
    <string name="cars_count"><![CDATA[<b>Ilość samochodów: </b>]]></string>
    <string name="ksrg_true">Jednostka należy do <![CDATA[<b>KSRG</b>]]></string>
    <string name="ksrg_false">Jednostka nie należy do <![CDATA[<b>KSRG</b>]]></string>
    <string name="register">Zarejestruj się!</string>
    <string name="register_username">Login</string>
    <string name="register_password">Hasło</string>
    <string name="register_repassword">Powtórz hasło</string>
    <string name="register_success">Rejestracja udana</string>
    <string name="register_denied_user_exist">Rejestracja nieudana - użytkownik istnieje</string>
    <string name="register_user_exist">Podany użytkownik juz istnieje"</string>
    <string name="sing_in">Zaloguj się</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="sign_in_dialog">Logowanie...</string>
    <string name="sign_in_success">Poprawnie zalogowano</string>
    <string name="invalid_login_or_password">Niepoprawny login lub hasło</string>
    <string name="data_downloading_in_progress">Trwa pobieranie danych...</string>
    <string name="fill_the_field">To pole musi byc wypełnione</string>
    <string name="passwords_not_the_same">Hasła nie są takie same</string>
    <string name="server_error_try_again_later">Błąd serwera - spróbuj później</string>
    <string name="timeout_error">Upłynął czas oczekiwania - spróbuj za chwilę</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sing_in_error">Wystąpił błąd podczas logowania - spróbuj ponownie</string>
    <string name="main_loading_image">Main Image on Loading</string>
    <string name="title_activity_fire_brigade">FireBrigadeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_firebrigade">Moje OSP</string>
    <string name="drawer_firefighters">Strażacy</string>
    <string name="drawer_cars">Samochody</string>
    <string name="drawer_equipment">Sprzęt</string>
    <string name="drawer_incidents">Zdarzenia</string>
    <string name="drawer_analyze">Analiza</string>
    <string name="drawer_logout">Wyloguj się</string>
    <string name="group_drawer_firebrigade">Jednostka</string>
    <string name="group_drawer_others">Pozostałe</string>
    <string name="navigation_view_header_title">Moja jednostka OSP</string>
    <string name="title_activity_add_edit_fire_brigade">AddEditFireBrigadeActivity</string>
    <string name="activity_login">Logowanie</string>
    <string name="activity_register">Rejestracja</string>
    <string name="activity_firebrigade">Jednostka</string>
    <string name="activity_addEditFirebrigade">Dodaj/edytuj</string>
    <string name="activity_firefighter">Strażacy</string>
    <string name="activity_firefighter_details">Informacje</string>
    <string name="title_activity_analysis">Analiza danych</string>
    <string name="refresh_action">Odśwież</string>
    <string name="title_activity_firefighter">FirefighterActivity</string>
    <string name="firefighters_no_content">Brak strażaków do wyświetlenia</string>
    <string name="firefighter_add_info">Wciśnij + aby dodać strażaka</string>
    <string name="firefighter_list_item_medical_tests_first_sentence">Badania do: </string>
    <string name="firefighter_list_item_name">Imię:</string>
    <string name="firefighter_list_item_lastName">Nazwisko:</string>
    <string name="firefighter_list_item_birthDate">Data urodzenia:</string>
    <string name="firefighter_list_item_medicalTests">Wygaśnięcie badań lekarskich</string>
    <string name="firefighter_loading_error">Wystąpił błąd podczas ładowania strażaków</string>
    <string name="firefighter_detail_missing">Brak danych...</string>
    <string name="firefighter_detail_label">Informacje ogólne</string>
    <string name="firefighter_detail_training_label">Wyszkolenie</string>
    <string name="firefighter_detail_training_dateLabel">Data uzyskania</string>
    <string name="firefighters_detail_training_no_content">Strażak nie ma jeszcze żadnych szkoleń</string>
    <string name="firefighter_detail_training_edit_info">Edytuj strażaka jeśli chcesz dodać umiejętności</string>
    <string name="firefighter_detail_training_loading_error">Błąd podczas ładowania szkoleń</string>
    <string name="firefighter_no_name">Nie podano</string>
    <string name="firefighter_no_last_name">Nie podano</string>
    <string name="firefighter_no_medical_tests">Brak badań</string>
    <string name="firefighter_no_birthday">Nie podano</string>
    <string name="firefighter_no_trainingDate">Nie podano</string>
    <string name="title_activity_add_edit_firefighter">AddEditFirefighterActivity</string>
    <string name="add_edit_firefighter_simple_data_label">Podstawowe dane</string>
    <string name="add_edit_firefighter_name">Imię</string>
    <string name="add_edit_firefighter_lastName">Nazwisko</string>
    <string name="add_edit_firefighter_birthday">Data urodzenia</string>
    <string name="add_edit_firefighter_expiryMedicalTestsDate">Badania medyczne ważne do</string>
    <string name="add_edit_firefighter_add_title">Dodawanie strażaka</string>
    <string name="add_edit_firefighter_edit_title">Edycja strażaka</string>
    <string name="add_edit_firefighter_update_trainings_error">Błąd podczas aktualizowania szkoleń</string>
    <string name="action_save">Zapisz</string>
    <string name="action_add_training">Dodaj szkolenie</string>
    <string name="add_edit_firefighter_server_error">Błąd serwera.. spróbuj ponownie</string>
    <string name="add_edit_firefighter_training_date">Data uzyskania</string>
    <string name="title_activity_car">Samochody</string>
    <string name="car_list_row_model">Model</string>
    <string name="car_list_row_type">Typ</string>
    <string name="car_list_row_operational_numbers">Numery operacyjne</string>
    <string name="car_list_row_operaional_plates">Rejestracja</string>
    <string name="car_fragment_no_cars">Brak samochodów do wyświetlenia</string>
    <string name="car_fragment_add_info">Wciśnij + aby dodać samochód</string>
    <string name="car_fragment_loading_error">Wystąpił błąd podczas ładowania samochodów</string>
    <string name="title_activity_car_details">Informacje o samochodzie</string>
    <string name="car_detail_label">Dane samochodu</string>
    <string name="car_detail_model_label">Marka i model</string>
    <string name="car_detail_operational_numbers_label">Numery operacyjne</string>
    <string name="car_detail_plates_label">Rejestracja</string>
    <string name="car_detail_type_label">Typ</string>
    <string name="car_detail_water_label">Woda</string>
    <string name="car_detail_foam_label">Piana</string>
    <string name="car_detail_motor_pump_performance_label">Wydajność pompy</string>
    <string name="car_detail_number_of_seats_label">Ilość miejsc</string>
    <string name="car_detail_no_model">Nie podano</string>
    <string name="car_detail_no_operational_numbers">Nie podano</string>
    <string name="car_detail_no_plates">Nie podano</string>
    <string name="car_detail_no_water">Brak danych</string>
    <string name="car_detail_no_type">Nie podano</string>
    <string name="equipment_list_row_name">Nazwa sprzętu</string>
    <string name="equipment_list_row_type">Typ sprzętu</string>
    <string name="equipment_list_row_car">Nie ma przypisanego samochodu</string>
    <string name="incident_list_row_desc">Opis zdarzenia</string>
    <string name="incident_list_row_date">Data zdarzenia</string>
    <string name="incident_list_row_type">Typ zdarzenia</string>
    <string name="incident_list_row_subtype">Podtyp zdarzenia</string>
    <string name="incident_list_row_city">Miejsce zdarzenia</string>
    <string name="analysis_method">Wybierz metodę analizy</string>
    <string name="general_analysis">Analiza ogólna</string>
    <string name="detail_analysis">Analiza szczegółowa</string>
    <string name="general_analysis_description">Analiza wyznacza reguły asocjacyjne na podstawie zdarzeń jednostki. Podczas analizy bazuje na typach zdarzeń i sprzętu użytego podczas zdarzeń</string>
    <string name="detail_analysis_description">Analiza wyznacza reguły asocjacyjne na podstawie zdarzeń jednostki. Podczas analizy bazuje na podtypach zdarzeń i sprzętu użytego podczas zdarzeń</string>
    <string name="report_type_choose">Wybierz typ raportu PDF</string>
    <string name="full_report">Raport pełny (naukowy)</string>
    <string name="simple_report_description">Raport prosty zawiera podstawowe wyniki analizy i jest przetworzony do formy przyjaznej osobom, które nie mają szczegółowej wiedzy na temat reguł asocjacyjnych.</string>
    <string name="full_report_description">Raport pełny zawiera szczegółowe informacje, od których wymagana jest wiedza dotycząca reguł asocjacyjnych.</string>
    <string name="do_analysis">Wykonaj analizę</string>
    <string name="simple_report">Raport prosty</string>
</resources>