<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp">

            <ProgressBar
                android:id="@+id/analysis_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/analysis_method" />

            <RadioGroup
                android:id="@+id/anylysis_method_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/detail_analysis_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/general_analysis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/general_analysis_description"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/general_analysis_radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_analysis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_analysis_description"
                    android:textSize="12sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/report_type_choose" />

            <RadioGroup
                android:id="@+id/report_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/full_report_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/full_report" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/full_report_description"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/simple_report_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/simple_report" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/simple_report_description"
                    android:textSize="12sp" />
            </RadioGroup>

            <Button
                android:id="@+id/analysis_confirm_button"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/do_analysis" />


        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>