<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.michalrubajczyk.myfirebrigade.fragment_add_firebrigade">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/add_firebrigade_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firebrigade_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firebrigade_name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firebrigade_voivodeship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firebrigade_voivodeship" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firebrigade_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firebrigade_district"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firebrigade_community"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firebrigade_community" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firebrigade_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firebrigade_city"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/firebrigade_ksrg_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/firebrigade_ksrg" />


            <Button
                android:id="@+id/firebrigade_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firebrigade_add_form_confirm" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
