<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/firefighter_listRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/row_padding_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/row_padding_vertical">


        <TextView
            android:id="@+id/firefighter_list_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firefighter_list_item_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firefighter_list_item_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firefighter_list_item_name"
            android:text="@string/firefighter_list_item_lastName"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firefighter_list_item_expiryMedicalTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/firefighter_list_item_medical_tests_first_sentence" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>